--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,6 +11,8 @@
 
     <TextView
         android:layout_gravity="center"
+        android:layout_margin="16dp"
+        android:padding="16dp"
         android:text="@string/task_list_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
