--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -10,14 +10,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
     <TextView
-        android:id="@+id/textTaskID"
+        android:id="@+id/textTaskName"
         style="?android:attr/textAppearanceMedium"
-        android:text="Task:"
+        android:text="Task Name:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
-        android:layout_toRightOf="@+id/textTaskID"
-        android:id="@+id/textViewTaskID"
+        android:layout_toRightOf="@+id/textTaskName"
+        android:id="@+id/textViewTaskName"
         style="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
