--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -2,27 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.uw.aad.mzm.sample.provider.DetailFragment"
+    tools:context="com.example.rlam.ckl8_250_homework2.DetailFragment"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
     <TextView
-        android:id="@+id/textTaskName"
-        style="?android:attr/textAppearanceMedium"
-        android:text="Task Name:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_toRightOf="@+id/textTaskName"
         android:id="@+id/textViewTaskName"
-        style="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textIsSelectable="true"/>
-    </RelativeLayout>
 
     <TextView
         android:id="@+id/textViewTaskDescription"
@@ -31,6 +19,4 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:textIsSelectable="true"/>
-
-
 </LinearLayout>
